2011-07-27  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Handle multiple overprint characters, albeit not
	the way people probably expect.
	Bug #3371782

2011-07-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_readbinary): Allow "using ... xticlabels()" for
	binary files as well as ascii files.  Only string-valued functions
	are valid in this case, as no string can be read from the binary 
	datafield itself.

	* term/svg.trm: Remove size limit on svg plot dimensionts.

2011-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes):  Correct positioning of bars in clustered
	histograms when some values are missing.
	Bug #3360882

2011-07-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (test_command): Do not allow the 'test' command if there
	is no current terminal.
	Bug #3347683

2011-06-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/svg.trm:  Pattern-fill definitions must initialize both
	fill and stroke style; otherwise the most recent setting may bleed
	through.
	Bug #3334216

2011-06-17  Ethan A Merritt  <merritt@u.washington.edu>

	* src/getcolor.c (quantize_gray)): Remove a possible discontinuity at
	the boundary of defined palettes with a small number of segments.
	Bug #3317746

2011-06-17  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/time.c (gstrptime):  The correction for the difference in epochs
	(2000 - 1970) was incorrect when reading times in %s format.
	Bug #3163386

2011-06-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/pm3d.c (z2cb): If cb is log-scale, then limit result to positive
	values.
	Bug #3316616

2011-05-31  Ethan A Merritt  <merritt@u.washington.edu>

	* term/emf.trm: Reset line and text colors at the start of each plot.

2011-05-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_open df_determine_matrix_info):
	Add a keyword '[s]plot ... nonuniform matrix'